<resources>
    <string name="app_name">SI1Marks</string>
    <string name="nav_header_title">Powered by Team DickClock</string>
    <string name="nav_header_subtitle">team@dickclock.ch</string>
    <string name="action_settings">Settings</string>

    <string name="menu_it">IT</string>
    <string name="menu_eln">ElN</string>
    <string name="menu_ela">ElA</string>
    <string name="menu_physic">Physic</string>
    <string name="menu_mathematics">Mathematics</string>
    <string name="menu_german">German</string>
    <string name="menu_tem">TeM</string>
    <string name="menu_static">Static</string>
    <string name="menu_cco">CCo</string>
    <string name="menu_resume">Resume</string>

</resources>