<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/switchSemester"
        android:visible="true"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_resume"
        android:title="@string/menu_resume" />
    <group
        android:id="@+id/German"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_german_S1"
            android:icon="@drawable/german"
            android:title="@string/menu_german" />
        <item
            android:id="@+id/nav_german_S2"
            android:icon="@drawable/german"
            android:title="@string/menu_german" />
    </group>
    <group
        android:id="@+id/ScientificBases"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mathematics_S1"
            android:icon="@drawable/mathematics"
            android:title="@string/menu_mathematics" />
        <item
            android:id="@+id/nav_mathematics_S2"
            android:icon="@drawable/mathematics"
            android:title="@string/menu_mathematics" />
        <item
            android:id="@+id/nav_it_S1"
            android:icon="@drawable/informatic"
            android:title="@string/menu_it" />
        <item
            android:id="@+id/nav_it_S2"
            android:icon="@drawable/informatic"
            android:title="@string/menu_it" />
        <item
            android:id="@+id/nav_physic_S2"
            android:icon="@drawable/physic"
            android:title="@string/menu_physic"
            android:visible="false" />
    </group>
    <group
        android:id="@+id/BusinessBases"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_eln_S1"
            android:icon="@drawable/electricity"
            android:title="@string/menu_eln" />
        <item
            android:id="@+id/nav_ela_S2"
            android:icon="@drawable/electricity"
            android:title="@string/menu_ela"
            android:visible="false" />
        <item
            android:id="@+id/nav_tem_S1"
            android:icon="@drawable/mechanic"
            android:title="@string/menu_tem" />
        <item
            android:id="@+id/nav_static_S2"
            android:icon="@drawable/mechanic"
            android:title="@string/menu_static" />
        <item
            android:id="@+id/nav_cco_S1"
            android:icon="@drawable/mechanic"
            android:title="@string/menu_cco" />
        <item
            android:id="@+id/nav_cco_S2"
            android:icon="@drawable/mechanic"
            android:title="@string/menu_cco" />
    </group>
</menu>